# poetry2nix-wrap

./: flake.nix  pyproject.toml
poetry2nix_wrap/: test_path.py
